--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.3",
+    "classnames": "^2.3.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
